--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "tustin/fortnite-php",
+    "name": "vicegold/fortnite-php",
     "license": "MIT",
     "description": "PHP wrapper for the official Fortnite API.",
-    "homepage": "https://github.com/Tustin/fortnite-php",
+    "homepage": "https://github.com/vicegold/fortnite-php",
     "keywords": ["fortnite", "api", "php"],
     "autoload": {
         "classmap": [
